--- a/WSDM-KKBox'sChurnPredictionChallenge/codes/xgbForFeatures.ipynb
+++ b/WSDM-KKBox'sChurnPredictionChallenge/codes/xgbForFeatures.ipynb
@@ -11,14 +11,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "E:\\anacoda\\lib\\site-packages\\sklearn\\cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "E:\\anacoda\\lib\\site-packages\\sklearn\\grid_search.py:43: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. This module will be removed in 0.20.\n  DeprecationWarning)\nE:\\anacoda\\lib\\site-packages\\sklearn\\lda.py:6: DeprecationWarning: lda.LDA has been moved to discriminant_analysis.LinearDiscriminantAnalysis in 0.17 and will be removed in 0.19\n  \"in 0.17 and will be removed in 0.19\", DeprecationWarning)\nE:\\anacoda\\lib\\site-packages\\sklearn\\learning_curve.py:23: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the functions are moved. This module will be removed in 0.20\n  DeprecationWarning)\nE:\\anacoda\\lib\\site-packages\\sklearn\\qda.py:6: DeprecationWarning: qda.QDA has been moved to discriminant_analysis.QuadraticDiscriminantAnalysis in 0.17 and will be removed in 0.19.\n  \"in 0.17 and will be removed in 0.19.\", DeprecationWarning)\n"
+      "E:\\anacoda\\lib\\site-packages\\sklearn\\cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
+      "E:\\anacoda\\lib\\site-packages\\sklearn\\grid_search.py:43: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. This module will be removed in 0.20.\n",
+      "  DeprecationWarning)\n",
+      "E:\\anacoda\\lib\\site-packages\\sklearn\\lda.py:6: DeprecationWarning: lda.LDA has been moved to discriminant_analysis.LinearDiscriminantAnalysis in 0.17 and will be removed in 0.19\n",
+      "  \"in 0.17 and will be removed in 0.19\", DeprecationWarning)\n",
+      "E:\\anacoda\\lib\\site-packages\\sklearn\\learning_curve.py:23: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the functions are moved. This module will be removed in 0.20\n",
+      "  DeprecationWarning)\n",
+      "E:\\anacoda\\lib\\site-packages\\sklearn\\qda.py:6: DeprecationWarning: qda.QDA has been moved to discriminant_analysis.QuadraticDiscriminantAnalysis in 0.17 and will be removed in 0.19.\n",
+      "  \"in 0.17 and will be removed in 0.19.\", DeprecationWarning)\n"
      ]
     }
    ],
@@ -35,7 +37,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def transform_df(df):\n",
@@ -55,7 +59,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train = pd.read_csv(\"G:\\PythonProjects\\KaggleOrOthersJourney/train_aft_process.csv\")"
@@ -64,7 +70,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "test = pd.read_csv(\"G:\\PythonProjects\\KaggleOrOthersJourney/test_aft_process.csv\")"
@@ -73,7 +81,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# user_logs_all = pd.DataFrame()\n",
@@ -90,7 +100,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train = train.fillna(0)\n",
@@ -100,7 +112,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cols = [c for c in train.columns if c not in ['is_churn','msno']]"
@@ -109,7 +123,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def xgb_score(preds, dtrain):\n",
@@ -126,34 +142,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\ttrain-log_loss:0.673347\tvalid-log_loss:0.673347\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Multiple eval metrics have been passed: 'valid-log_loss' will be used for early stopping.\n\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Will train until valid-log_loss hasn't improved in 1500 rounds.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[50]\ttrain-log_loss:0.197723\tvalid-log_loss:0.197723\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[0]\ttrain-log_loss:0.673347\tvalid-log_loss:0.673347\n",
+      "Multiple eval metrics have been passed: 'valid-log_loss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-log_loss hasn't improved in 1500 rounds.\n",
+      "[50]\ttrain-log_loss:0.197723\tvalid-log_loss:0.197723\n",
       "[100]\ttrain-log_loss:0.068188\tvalid-log_loss:0.068188\n"
      ]
     }
@@ -182,7 +175,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "test['is_churn'] = pred.clip(0.0000001, 0.999999)"
@@ -191,7 +186,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "test[['msno','is_churn']].to_csv('submission4.csv.gz', index=False, compression='gzip')"
@@ -200,7 +197,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -211,7 +210,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plt.rcParams['figure.figsize'] = (7.0, 7.0)"
@@ -220,7 +221,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# xgb.plot_importance(booster=model);"
@@ -262,30 +265,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
