--- a/tianchi/shop/code/dataview.ipynb
+++ b/tianchi/shop/code/dataview.ipynb
@@ -252,7 +252,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# 绘图看看\n",
@@ -1361,7 +1363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
