--- a/tianchi/shop/code/wifi_info.ipynb
+++ b/tianchi/shop/code/wifi_info.ipynb
@@ -1111,6 +1111,7 @@
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1195,7 +1196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
